# isaac_manipulator

./: README.md
isaac_manipulator_asset_bringup/: CMakeLists.txt  package.xml
isaac_manipulator_asset_bringup/scripts/: setup_perception_models.py
isaac_manipulator_asset_bringup/test/: CMakeLists.txt
isaac_manipulator_bringup/: CMakeLists.txt  package.xml
isaac_manipulator_bringup/launch/: camera_calibration.launch.py  cumotion_nvblox_pose_to_pose.launch.py  cumotion_object_following.launch.py  record_realsense.launch.py  workflows.launch.py
isaac_manipulator_bringup/params/: nsys_wrapper_for_system_visibility.sh  sim_launch_params.yaml  sim_launch_params_bazel.yaml  ur10e_robotiq_2f_140_gear_assembly.yaml  ur10e_robotiq_2f_140_mac_and_cheese.yaml  ur10e_robotiq_2f_140_mac_and_cheese_foundation_stereo.yaml  ur10e_robotiq_2f_85_gear_assembly.yaml  ur5e_hawk_object_following.yaml  ur5e_realsense_object_following.yaml  ur5e_robotiq_85_mac_and_cheese.yaml  ur5e_robotiq_85_soup_can.yaml
isaac_manipulator_bringup/rviz/: hawk.rviz  realsense.rviz
isaac_manipulator_bringup/test/: CMakeLists.txt  collect_target_less_calibration_data_test.py  compare_pose_estimation_results.sh  core_nodes_qos_realsense_test.py  core_nodes_qos_sim_test.py  core_nodes_topic_connections_test.py  disable_nvblox_realsense_test.py  disable_nvblox_sim_test.py  drivers_object_following_on_robot_test.py  drivers_pick_and_place_on_robot_test.py  foundationpose_qos_object_following_realsense_test.py  foundationpose_qos_object_following_sim_test.py  foundationpose_qos_servers_pick_and_place_realsense_test.py  foundationpose_qos_servers_pick_and_place_sim_test.py  foundationpose_topic_connections_object_following_test.py  foundationpose_topic_connections_pick_and_place_test.py  gear_assembly_pol_realsense_test.py  gear_assembly_pol_sim_test.py  gear_insertion_pol_test_sim.py  grounding_dino_detection_pol_realsense_test.py  grounding_dino_detection_pol_sim_test.py  grounding_dino_detector_servers_realsense_test.py  manipulator_cumotion_and_perception_load_test_realsense_test.py  manipulator_cumotion_and_perception_load_test_sim_test.py  object_detection_pol_realsense_test.py  object_detection_pol_sim_test.py  pick_and_place_servers_realsense_pol_test.py  pick_and_place_servers_realsense_with_ess_test.py  pick_and_place_servers_realsense_with_foundationstereo_test.py  pick_and_place_servers_sim_test.py  pose_differences_depth_backend_test.py  pose_estimation_pol_realsense_test.py  pose_estimation_pol_sim_test.py  pose_estimation_reproducibility_test.py  record_calibration_rosbag_realsense_test.py  robot_segmentor_correctness_check_realsense_test.py  robot_segmentor_correctness_check_sim_test.py  robot_segmentor_pol_realsense_2_test.py  robot_segmentor_pol_realsense_ess_test.py  robot_segmentor_pol_realsense_foundationstereo_2_test.py  (+13 more)
isaac_manipulator_gear_assembly/: CMakeLists.txt  package.xml
isaac_manipulator_gear_assembly/scripts/: gear_assembly_orchestrator.py  pick_and_place_orchestrator.py
isaac_manipulator_gear_assembly/test/: test_gear_assembly_orchestrator.py  test_pick_and_place_orchestrator.py
isaac_manipulator_orchestration/: package.xml  setup.cfg  setup.py
isaac_manipulator_orchestration/launch/: mock_servers.launch.py
isaac_manipulator_pick_and_place/: CMakeLists.txt  package.xml  setup.cfg  setup.py
isaac_manipulator_pick_and_place/config/: controllers.yaml  controllers_sim.yaml  grasps.yaml  joint_limits.yaml  moveit_sim_controllers.yaml  robotiq_2f_140_controllers.yaml  robotiq_2f_140_grasps_mac_and_cheese.yaml  robotiq_2f_85_controllers.yaml
isaac_manipulator_pick_and_place/launch/: grasp_visualizer.launch.py  isaac_sim_workflows.launch.py  orchestration.launch.py  ur_pick_and_place.launch.py
isaac_manipulator_pick_and_place/meshes/: robotiq_2f_140.mtl
isaac_manipulator_pick_and_place/params/: multi_object_pick_and_place_behavior_tree_params.yaml  multi_object_pick_and_place_blackboard_params.yaml
isaac_manipulator_pick_and_place/rviz/: grasp_visualizer.rviz  pick_and_place.rviz  viewport.rviz
isaac_manipulator_pick_and_place/scripts/: end_effector_marker.py  grasp_reader.py  isaac_sim_gripper_action_server.py  joint_parser_node.py  pick_and_place_orchestrator.py
isaac_manipulator_pick_and_place/srdf/: robotiq_2f_140.srdf.xacro  robotiq_2f_85.srdf.xacro  ur_robotiq_2f_140_gripper.srdf.xacro  ur_robotiq_2f_85_gripper.srdf.xacro
isaac_manipulator_pick_and_place/urdf/: soup_can.urdf  ur10e_robotiq_base_sim.ros2_control.xacro  ur_robotiq_gripper.urdf.xacro
isaac_manipulator_robot_description/: package.xml  setup.py
isaac_manipulator_robot_description/config/: initial_positions.yaml  moveit_controllers.yaml  moveit_sim_controllers.yaml  robotiq_2f_140_grasps_large_gear.yaml  robotiq_2f_140_grasps_mac_and_cheese_galileo_ur10e_test_bench.yaml  robotiq_2f_140_grasps_soup_can.yaml  robotiq_2f_85_grasps_large_gear.yaml  robotiq_2f_85_grasps_mac_and_cheese.yaml  robotiq_2f_85_grasps_soup_can.yaml  ros2_control_controllers.yaml  ros2_control_controllers_sim.yaml  ur_robotiq_grasps_sim_angled.yaml
isaac_manipulator_robot_description/meshes/: robotiq_2f_85.mtl
isaac_manipulator_robot_description/srdf/: robotiq_2f_140.srdf.xacro  robotiq_2f_85.srdf.xacro  ur_robotiq_2f_140_gripper.srdf.xacro  ur_robotiq_2f_85_gripper.srdf.xacro
isaac_manipulator_robot_description/urdf/: soup_can.urdf  ur10e_robotiq_base_sim.ros2_control.xacro  ur_robotiq_gripper.urdf.xacro  ur_sim.urdf.xacro  ur_sim_macro.xacro
isaac_manipulator_ros_python_utils/: package.xml  setup.cfg  setup.py
isaac_manipulator_ros_python_utils/isaac_manipulator_ros_python_utils/: __init__.py  config.py  constants.py  core.py  drivers.py  gear_assembly.py  geometry.py  grasp_reader.py  launch_utils.py  manipulator_types.py  ood_detector.py  perception.py  planning_utils.py  robot_description_utils.py  sensors.py  test_utils.py  types.py  workflows.py
isaac_manipulator_servers/: CMakeLists.txt  package.xml
isaac_manipulator_test_utils/: setup.py  (+1 more)
isaac_manipulator_ur_dnn_policy/: CMakeLists.txt  package.xml
(+190 files in other folders)
