<?xml version="1.0"?>

<!--
SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

SPDX-License-Identifier: Apache-2.0
-->

<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>isaac_manipulator_asset_bringup</name>
  <version>4.1.0</version>
  <description>Asset bringup package for Isaac Manipulator</description>
  <maintainer email="isaac-ros-maintainers@nvidia.com">Isaac ROS Maintainers</maintainer>
  <license>Apache-2.0</license>
  <url type="website">https://developer.nvidia.com/isaac-ros-gems/</url>
  <author>Karanbir Chahal</author>

  <depend>isaac_ros_dope</depend>

  <exec_depend>isaac_common_py</exec_depend>
  <exec_depend>python3-gdown</exec_depend>

  <test_depend>isaac_ros_test_cmake</test_depend>
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <build_depend>isaac_ros_common</build_depend>
  <build_depend>isaac_ros_ess_models_install</build_depend>
  <build_depend>isaac_ros_foundationpose_models_install</build_depend>
  <build_depend>isaac_ros_foundationstereo_models_install</build_depend>
  <build_depend>isaac_ros_grounding_dino_models_install</build_depend>
  <build_depend>isaac_ros_rtdetr_models_install</build_depend>
  <build_depend>isaac_ros_segment_anything</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
