<?xml version="1.0"?>

<!--
SPDX-FileCopyrightText: Copyright (c) 2024 NVIDIA CORPORATION & AFFILIATES. All rights reserved.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

SPDX-License-Identifier: Apache-2.0
-->

<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>isaac_manipulator_bringup</name>
  <version>3.2.13</version>
  <description>Reference example package for Isaac Manipulator</description>
  <maintainer email="isaac-ros-maintainers@nvidia.com">Isaac ROS Maintainers</maintainer>
  <license>Apache-2.0</license>
  <url type="website">https://developer.nvidia.com/isaac-ros-gems/</url>
  <author>Kajanan Chinniah</author>
  <author>Swapnesh Wani</author>

  <depend>isaac_manipulator_ros_python_utils</depend>
  <depend>isaac_ros_cumotion</depend>
  <depend>isaac_ros_cumotion_examples</depend>
  <depend>isaac_ros_cumotion_interfaces</depend>
  <depend>isaac_ros_cumotion_moveit</depend>
  <depend>isaac_ros_cumotion_object_attachment</depend>
  <depend>isaac_ros_dope</depend>
  <depend>isaac_ros_esdf_visualizer</depend>
  <depend>isaac_ros_ess</depend>
  <depend>isaac_ros_foundationpose</depend>
  <depend>isaac_ros_hawk</depend>
  <depend>isaac_ros_image_proc</depend>
  <depend>isaac_ros_launch_utils</depend>
  <depend>isaac_ros_moveit_goal_setter</depend>
  <depend>isaac_ros_nitros_topic_tools</depend>
  <depend>isaac_ros_pose_proc</depend>
  <depend>isaac_ros_rtdetr</depend>
  <depend>isaac_ros_tensor_proc</depend>
  <depend>nvblox_ros</depend>
  <depend>nvblox_examples_bringup</depend>
  <depend>ros2launch</depend>
  <depend>tf2_ros</depend>
  <depend>ur_moveit_config</depend>

  <test_depend>isaac_ros_test_cmake</test_depend>

  <build_depend>isaac_ros_common</build_depend>
  <build_depend>isaac_ros_ess_models_install</build_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
