<?xml version="1.0"?>

<!--
SPDX-FileCopyrightText: Copyright (c) 2024-2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.

SPDX-License-Identifier: Apache-2.0
-->

<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>isaac_manipulator_pick_and_place</name>
  <version>4.2.0</version>
  <description>Reference example package for Isaac Manipulator Pick and Place</description>
  <maintainer email="isaac-ros-maintainers@nvidia.com">Isaac ROS Maintainers</maintainer>
  <license>Apache-2.0</license>
  <url type="website">https://developer.nvidia.com/isaac-ros-gems/</url>
  <author>Animesh Singhal</author>
  <author>Ashwin Varghese Kuruttukulam</author>
  <author>Karanbir Chahal</author>
  <author>Swapnesh Wani</author>

  <depend>isaac_manipulator_interfaces</depend>
  <depend>isaac_manipulator_orchestration</depend>
  <depend>isaac_manipulator_ros_python_utils</depend>
  <depend>py_trees</depend>
  <depend>py_trees_ros</depend>
  <depend>py_trees_ros_viewer</depend>

  <depend>rclpy</depend>
  <depend>tf2_ros_py</depend>

  <exec_depend>ros2launch</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>